fixed random gap on mobile with contact form + other pages
went through all other routing pages to change position of page div to relative to give height to entire body. the problem lies in previous hard-coded heights and margins that affected later spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@ html {
 
 body {
   margin: 0;
-  overflow: clip;
   font: 300 11px/1.4 "Helvetica Neue", "san-serif";
   display: block;
   -webkit-font-smoothing: antialiased;
