--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,7 +1,7 @@
 .contact-page {
   display: grid;
   grid: auto / 1fr 1fr;
-  height: 100svh;
+  height: auto;
   margin: auto;
   box-sizing: border-box;
   align-items: center;
