--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -8,6 +8,7 @@
 
 @media only screen and (max-width: 550px) {
   .page-container {
+    position: relative;
     left: 0;
     width: 100%;
   }
