--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -213,7 +213,7 @@
       background-color: var(--background-color);
       width: 70%;
       left: calc(-70% - 1px);
-      height: calc(100vh - 6px);
+      height: calc(100svh - 61px);
       opacity: 0.95;
       border-right: 1px solid var(--text-alt-color);
       translate: 0;
